--- a/Materials RL Problem v2.ipynb
+++ b/Materials RL Problem v2.ipynb
@@ -42,7 +42,9 @@
     "  \n",
     "    - Incremental reward - Calculate a reward at each layer based on some heuristic, for example, looking at the cost and performance of the materials of the layer you just calculated.  The heuristic typically requires some domain knowledge, as you are essentially already suggesting a path.  (The heuristic ends up acting like an the value function).  This information can help lead to a result faster, but risks missing the best solution if the heuristic is poor, and potentially getting stuck in local minima.  Using the maze analogy, this would be applying a reward at each step based on the decrease in Manhattan distance to goal.  By encouraging actions which get closer to the goal, a solution might be found faster, but makes it difficult to find paths which have to move further away first but are better overall.  \n",
     "\n",
-    "- RL is used here as an optimization.  The goal is to explore the space of configurations to find the best configuration given the objective function.  This is different than a typical training approach which searchs model parameter space to find the best set for performance over a large training set.  "
+    "- RL is used here as an optimization.  The goal is to explore the space of configurations to find the best configuration given the objective function.  This is different than a typical training approach which searchs model parameter space to find the best set for performance over a large training set.\n",
+    "\n",
+    "- The exploration conducted via RL algorithms (trying random actions) will be used to explore the configuration space.  "
    ]
   },
   {
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0111c050-26f3-45f2-b71b-136a5ef9122d",
    "metadata": {},
    "outputs": [],
@@ -143,56 +145,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bc1c117a-5cc8-4e18-a36d-2b837e93bf3b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'material_library': {'d1': {'k': 0.2, 'cost': 1.0},\n",
-       "  'd2': {'k': 0.05, 'cost': 0.6},\n",
-       "  'd3': {'k': 0.15, 'cost': 1.2},\n",
-       "  'd4': {'k': 0.03, 'cost': 0.5},\n",
-       "  'c1': {'k': 200.0, 'cost': 20.0},\n",
-       "  'c2': {'k': 50.0, 'cost': 8.0},\n",
-       "  'c3': {'k': 10.0, 'cost': 2.0},\n",
-       "  'c4': {'k': 5.0, 'cost': 1.0},\n",
-       "  'c5': {'k': 100.0, 'cost': 12.0}},\n",
-       " 'layers': [{'thickness': 0.5,\n",
-       "   'insulating_type': 'I1',\n",
-       "   'insulating_options': ['d2', 'd4'],\n",
-       "   'thermal_regions': ['T1', 'T2'],\n",
-       "   'thermal_options': {'T1': ['c1', 'c2', 'c3'], 'T2': ['c2', 'c4']},\n",
-       "   'pattern': array([[-1, -1, -1, -1],\n",
-       "          [-1,  0,  0, -1],\n",
-       "          [-1,  1,  1, -1],\n",
-       "          [-1, -1, -1, -1]], dtype=int8)},\n",
-       "  {'thickness': 0.3,\n",
-       "   'insulating_type': 'I2',\n",
-       "   'insulating_options': ['d1', 'd2'],\n",
-       "   'thermal_regions': ['T2'],\n",
-       "   'thermal_options': {'T2': ['c2', 'c4']},\n",
-       "   'pattern': array([[-1, -1, -1, -1],\n",
-       "          [-1,  0,  0, -1],\n",
-       "          [-1,  0,  0, -1],\n",
-       "          [-1, -1, -1, -1]], dtype=int8)},\n",
-       "  {'thickness': 0.2,\n",
-       "   'insulating_type': 'I3',\n",
-       "   'insulating_options': ['d1', 'd3', 'd4'],\n",
-       "   'thermal_regions': ['T1', 'T3'],\n",
-       "   'thermal_options': {'T1': ['c1', 'c2', 'c3'], 'T3': ['c1', 'c3', 'c5']},\n",
-       "   'pattern': array([[-1,  0, -1,  1],\n",
-       "          [-1,  0, -1,  1],\n",
-       "          [-1,  0, -1,  1],\n",
-       "          [-1,  0, -1,  1]], dtype=int8)}]}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "make_sample_problem()"
    ]
@@ -212,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "499222b2-046e-45a2-9c4f-102e81d7d8e3",
    "metadata": {},
    "outputs": [],
@@ -221,19 +177,29 @@
     "import gymnasium as gym\n",
     "from gymnasium import spaces\n",
     "\n",
+    "# Gym environment for this task\n",
     "class SemiconductorEnv(gym.Env):\n",
     "    metadata = {\"render_modes\": []}\n",
     "\n",
+    "    # Initialization function\n",
     "    def __init__(self, problem, obs_length=10):\n",
     "        super().__init__()\n",
     "        self.problem = problem\n",
+    "\n",
+    "        # The layers\n",
     "        self.layers = problem[\"layers\"]\n",
+    "\n",
+    "        # The types of materials for the insulation and thermal components\n",
     "        self.material_library = problem[\"material_library\"]\n",
+    "\n",
+    "        # The number of layers\n",
     "        self.n_layers = len(self.layers)\n",
+    "\n",
+    "        # Start at layer 0 (the bottom)\n",
     "        self.current_layer = 0\n",
     "        self.selected_materials = []\n",
     "\n",
-    "        # Fixed-length observation for SB3\n",
+    "        \n",
     "        self.obs_length = obs_length\n",
     "        self.observation_space = spaces.Box(\n",
     "            low=0.0, high=1000.0, shape=(self.obs_length,), dtype=np.float32\n",
@@ -246,10 +212,13 @@
     "                max_sizes.append(len(layer[\"thermal_options\"][r]))\n",
     "            max_sizes.append(len(layer[\"insulating_options\"]))\n",
     "\n",
-    "        # The action space is definite a multi discrete array.  ie. a value of each insulation and thermal component. \n",
+    "        # The action space is defined as a multi discrete array.  ie. a value of each insulation and thermal component. \n",
     "        self.action_space = spaces.MultiDiscrete(max_sizes)\n",
     "\n",
+    "    # Reset the problem\n",
     "    def reset(self, seed=None, options=None):\n",
+    "\n",
+    "        # Back to layer 0\n",
     "        self.current_layer = 0\n",
     "        self.selected_materials = []\n",
     "        return self._get_obs(), {}\n",
@@ -349,87 +318,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3b66a9d0-55f6-43a7-bb0f-ef9e66e8cdc8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using cuda device\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/aatrash/deeplearning/lib/python3.12/site-packages/stable_baselines3/common/on_policy_algorithm.py:150: UserWarning: You are trying to run PPO on the GPU, but it is primarily intended to run on the CPU when not using a CNN policy (you are using ActorCriticPolicy which should be a MlpPolicy). See https://github.com/DLR-RM/stable-baselines3/issues/1245 for more info. You can pass `device='cpu'` or `export CUDA_VISIBLE_DEVICES=` to force using the CPU.Note: The model will train, but the GPU utilization will be poor and the training might take longer than on CPU.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------------------------\n",
-      "| time/              |      |\n",
-      "|    fps             | 653  |\n",
-      "|    iterations      | 1    |\n",
-      "|    time_elapsed    | 3    |\n",
-      "|    total_timesteps | 2048 |\n",
-      "-----------------------------\n",
-      "-----------------------------------------\n",
-      "| time/                   |             |\n",
-      "|    fps                  | 566         |\n",
-      "|    iterations           | 2           |\n",
-      "|    time_elapsed         | 7           |\n",
-      "|    total_timesteps      | 4096        |\n",
-      "| train/                  |             |\n",
-      "|    approx_kl            | 0.024900708 |\n",
-      "|    clip_fraction        | 0.422       |\n",
-      "|    clip_range           | 0.2         |\n",
-      "|    entropy_loss         | -7.14       |\n",
-      "|    explained_variance   | -0.000126   |\n",
-      "|    learning_rate        | 0.0003      |\n",
-      "|    loss                 | 46.6        |\n",
-      "|    n_updates            | 10          |\n",
-      "|    policy_gradient_loss | -0.0567     |\n",
-      "|    value_loss           | 142         |\n",
-      "-----------------------------------------\n",
-      "-----------------------------------------\n",
-      "| time/                   |             |\n",
-      "|    fps                  | 550         |\n",
-      "|    iterations           | 3           |\n",
-      "|    time_elapsed         | 11          |\n",
-      "|    total_timesteps      | 6144        |\n",
-      "| train/                  |             |\n",
-      "|    approx_kl            | 0.022431057 |\n",
-      "|    clip_fraction        | 0.41        |\n",
-      "|    clip_range           | 0.2         |\n",
-      "|    entropy_loss         | -7.07       |\n",
-      "|    explained_variance   | -0.000188   |\n",
-      "|    learning_rate        | 0.0003      |\n",
-      "|    loss                 | 65.5        |\n",
-      "|    n_updates            | 20          |\n",
-      "|    policy_gradient_loss | -0.0635     |\n",
-      "|    value_loss           | 175         |\n",
-      "-----------------------------------------\n",
-      "Selected materials per layer: [{'T1': 'c1', 'T2': 'c2', 'I1': 'd4'}, {'T2': 'c2', 'I2': 'd2'}, {'T1': 'c2', 'T3': 'c1', 'I3': 'd3'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from stable_baselines3 import PPO\n",
     "from stable_baselines3.common.env_util import DummyVecEnv\n",
     "\n",
     "problem = make_sample_problem()\n",
-    "env = DummyVecEnv([lambda: SemiconductorEnv(problem)])  # wrap for SB3\n",
+    "env = DummyVecEnv([lambda: SemiconductorEnv(problem)])  \n",
     "model = PPO(\"MlpPolicy\", env, verbose=1)\n",
     "model.learn(total_timesteps=5000)\n",
     "\n",
     "# Access the raw environment\n",
-    "raw_env = env.envs[0]  # unwrap DummyVecEnv\n",
+    "raw_env = env.envs[0]  # \n",
     "obs = raw_env.reset()[0]  # Gymnasium-style reset returns (obs, info)\n",
     "done = False\n",
     "\n",
@@ -447,12 +350,13 @@
    "metadata": {},
    "source": [
     "<h2>Next Steps</h2>\n",
+    "\n",
     "- A preference could be added to each of the materials.  This could result in more of an interactive component to the RL system. \n",
     "Solutions could be presented to the customer to rank, and the preference would be learned (RLHF-style)\n",
     "\n",
     "- The current environmental model does not consider the actual location of the materials on the layer, or the interactions between the layers.  This could be added to the SemiconductorEnv to get a more realistic behavior of the system.\n",
-    "- \n",
-    "- Run experiments on Single Step RL (configure all layers as single action) and Multistep w/ Delayed Reward"
+    "\n",
+    "- Run experiments on Single Step RL (configure all layers as single action) and Multistep w/ Delayed Reward to compare the performance"
    ]
   },
   {
