Added more comments and discussion

--- a/Materials RL Problem v2.ipynb
+++ b/Materials RL Problem v2.ipynb
@@ -49,6 +49,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9cf4617-0bd3-474d-9e4e-ca3b8be12f9e",
+   "metadata": {},
+   "source": [
+    "For this implementation, we will use a multistep incremental reward implementation.  This can easily be modified to do the delayed reward approach.\n",
+    "\n",
+    "<h3>Action Space</h3>\n",
+    "\n",
+    "The action sapce is a 1-d array of integers where each position represents a configuration for a material.  For each step, only the values for the layers till the current layer are set (with the remainder of the array being clipped).  \n",
+    "\n",
+    "<h3>Observation Space</h3>\n",
+    "\n",
+    "The observation space includes information about the current layer which is about to be set.  Includes the thickness, the thermal material, and the insulating material. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b9d7e1cd-2f7b-4741-b3e6-f5b82d37ff92",
    "metadata": {},
    "source": [
@@ -189,7 +205,7 @@
     "        # The layers\n",
     "        self.layers = problem[\"layers\"]\n",
     "\n",
-    "        # The types of materials for the insulation and thermal components\n",
+    "        # The types of materials for the insulation and thermal components which can be selected and their properties\n",
     "        self.material_library = problem[\"material_library\"]\n",
     "\n",
     "        # The number of layers\n",
@@ -223,6 +239,7 @@
     "        self.selected_materials = []\n",
     "        return self._get_obs(), {}\n",
     "\n",
+    "    # The observation is the information about the next layer we need to configure.  \n",
     "    def _get_obs(self):\n",
     "        layer = self.layers[self.current_layer]\n",
     "        obs = [layer[\"thickness\"]] + \\\n",
