More details and comments

--- a/Materials RL Problem v2.ipynb
+++ b/Materials RL Problem v2.ipynb
@@ -52,15 +52,26 @@
    "id": "b9cf4617-0bd3-474d-9e4e-ca3b8be12f9e",
    "metadata": {},
    "source": [
-    "For this implementation, we will use a multistep incremental reward implementation.  This can easily be modified to do the delayed reward approach.\n",
+    "For this implementation, we will use a delayed reward implementation.  The reward is only calculated and returned after the final layer of the environment is calculated.\n",
     "\n",
     "<h3>Action Space</h3>\n",
     "\n",
-    "The action sapce is a 1-d array of integers where each position represents a configuration for a material.  For each step, only the values for the layers till the current layer are set (with the remainder of the array being clipped).  \n",
+    "The action sapce is a 1-d array of integers where each position represents a configuration for a material.  For each step, only the values for the layers till the current layer are set (with the remainder of the set to 0's to maintain constant array length). \n",
+    "\n",
+    "action = [<i>layer0_config, layer1_config, layer2_config</i>]\n",
+    "<pre>\n",
+    "max_sizes = [3,2,2,    # layer 0 (T1, T2, I1)\n",
+    "             2,2,      # layer 1 (T2, I2)\n",
+    "             3,3,3]    # layer 2 (T1, T3, I3)\n",
+    "\n",
+    "example_action = [1,0,0,1,0,2,1,0]\n",
+    "</pre>\n",
+    "\n",
     "\n",
     "<h3>Observation Space</h3>\n",
     "\n",
-    "The observation space includes information about the current layer which is about to be set.  Includes the thickness, the thermal material, and the insulating material. \n"
+    "The observation space includes information about the current layer which is about to be set.  Includes the thickness, the thermal material options, and the insulating material options.  The number of options will be used as a mask when looking at the action array.  This is only about the layer we are about to configure.  (Note:  Some of these variables are included to simplify operations in the environment.  As each layer is treated independently, most of the observation space could be calculated on-demand from the problem specification).\n",
+    "\n"
    ]
   },
   {
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0111c050-26f3-45f2-b71b-136a5ef9122d",
    "metadata": {},
    "outputs": [],
@@ -215,20 +226,21 @@
     "        self.current_layer = 0\n",
     "        self.selected_materials = []\n",
     "\n",
-    "        \n",
+    "        # The observation space.  \n",
     "        self.obs_length = obs_length\n",
     "        self.observation_space = spaces.Box(\n",
     "            low=0.0, high=1000.0, shape=(self.obs_length,), dtype=np.float32\n",
     "        )\n",
     "\n",
     "        # Max-size action space covering all layers\n",
+    "        # This is the maximum value of each entry.  How many different materials can this component select from?\n",
     "        max_sizes = []\n",
     "        for layer in self.layers:\n",
     "            for r in layer[\"thermal_regions\"]:\n",
     "                max_sizes.append(len(layer[\"thermal_options\"][r]))\n",
     "            max_sizes.append(len(layer[\"insulating_options\"]))\n",
     "\n",
-    "        # The action space is defined as a multi discrete array.  ie. a value of each insulation and thermal component. \n",
+    "        # The action space is defined as a multi discrete array.  ie. a value of assigned each insulation and thermal component.\n",
     "        self.action_space = spaces.MultiDiscrete(max_sizes)\n",
     "\n",
     "    # Reset the problem\n",
@@ -240,6 +252,10 @@
     "        return self._get_obs(), {}\n",
     "\n",
     "    # The observation is the information about the next layer we need to configure.  \n",
+    "    # This only describes the layer we are about to configure.  \n",
+    "    # Values in the observation vector include:\n",
+    "    # - Thickness\n",
+    "    # - \n",
     "    def _get_obs(self):\n",
     "        layer = self.layers[self.current_layer]\n",
     "        obs = [layer[\"thickness\"]] + \\\n",
@@ -264,7 +280,8 @@
     "        num_regions = len(layer[\"thermal_regions\"])\n",
     "        num_options = num_regions + 1  # thermal + insulating\n",
     "    \n",
-    "        # Take only first num_options entries\n",
+    "        # Take only first num_options entries. ie. only consider the part of the action space related to the layers so far.\n",
+    "        # Ignore the rest of the vector as those consider actions related to future layers.\n",
     "        action = action[:num_options]\n",
     "    \n",
     "        # Clip each action to layer-specific max index\n",
@@ -299,7 +316,7 @@
     "        # Total cost given the materials\n",
     "        total_cost = 0.0\n",
     "\n",
-    "        # For each layer, calculate \n",
+    "        # For each layer, calculate the value\n",
     "        for layer, chosen in zip(self.layers, self.selected_materials):\n",
     "            k_sum = 0.0\n",
     "\n",
@@ -380,6 +397,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "169d6360-a088-4da9-b202-690bddf81e20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5962425a-6164-493e-8603-9901f0c8a683",
    "metadata": {},
    "outputs": [],
    "source": []
